<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/my_move"
        android:checkableBehavior="single">
        <item
            android:id="@+id/device_protection"
            android:icon="@drawable/ic_logo"
            android:title="@string/device_protection" />

        <item
            android:id="@+id/application_manager"
            android:icon="@drawable/ic_logo"
            android:title="@string/application_manager" />

        <item
            android:id="@+id/activity_log"
            android:icon="@drawable/ic_logo"
            android:title="@string/activity_log" />

        <item
            android:id="@+id/whitelist"
            android:icon="@drawable/ic_logo"
            android:title="@string/whitelist" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_logo"
            android:title="@string/profile" />

        <item
            android:id="@+id/reset_password"
            android:icon="@drawable/ic_logo"
            android:title="@string/reset_password" />
    </group>
    <group
        android:id="@+id/his_move"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_logo"
            android:title="@string/settings" />

        <item
            android:id="@+id/how_it_works"
            android:icon="@drawable/ic_logo"
            android:title="@string/how_it_works" />

        <item
            android:id="@+id/upgrade"
            android:icon="@drawable/ic_logo"
            android:title="@string/upgrade" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_logo"
            android:title="@string/about_us" />
    </group>

</menu>